--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,1 +1,30 @@
-h1= question.title
+h4
+  span Question id:
+  span= question.id
+br
+span Question title:
+br
+span= question.title
+br
+br
+span Question body:
+br
+span= question.body
+
+h5
+  span Answers:
+  span= question.answers.count
+  br
+  = link_to 'Add answer', new_question_answer_path(question)
+  br
+  br
+  - question.answers.each do |answer|
+    span answer id:
+    span= answer.id
+    br
+    span answer body:
+    span= answer.body
+    br
+    span= link_to 'Edit answer', edit_answer_path(answer)
+    br
+    br
