before refactoring acceptance test sign in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
   <body>
     <%= link_to 'Questions', questions_path %>
     <br>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <br>
     <%= yield %>
   </body>
 </html>
