--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,4 +1,4 @@
-h4
+h1
   span Question id:
   span= @question.id
 br
@@ -10,6 +10,8 @@ br
 span Question body:
 br
 span= @question.body
+br
+h3= link_to 'Edit question', edit_question_path(@question)
 
 h5
   span Answers:
