--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -2,6 +2,8 @@ h2
   = link_to 'Ask question', new_question_path
 
 - @questions.each do |q|
-  h4= q.title
+  span __________________________________________
+  h4= link_to "#{q.title}", question_path(q)
   p= q.body
-  h5= link_to 'Show', question_path(q)
+
+
