make render form answer, into question page

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -13,13 +13,13 @@ h3
   = link_to 'Delete question', question_path(@question), method: :delete
 
 h4
-  = link_to 'Add answer', new_question_answer_path(@question)
+  = render 'answers/form'
   br
   span Answers:
   span= @question.answers.count
   br
   br
-  - @question.answers.each do |answer|
+  - @question.answers.order(id: :desc).each do |answer|
     span user:
     span= User.find(answer.user_id).email
     br
