--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -24,15 +24,4 @@ h4
   span= @question.answers.count
   br
   br
-  - @question.answers.order(id: :desc).each do |answer|
-    span user:
-    span= User.find(answer.user_id).email
-    br
-    span answer body:
-    span= answer.body
-    br
-    span= link_to 'Edit answer', edit_answer_path(answer)
-    span |
-    span= link_to 'Delete answer', answer_path(answer), method: :delete
-    br
-    br
+  = render @question.answers
