--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,3 +1,3 @@
 span __________________________________________
-h4= link_to "#{question.title}", question_path(question)
+h4= link_to question.title, question_path(question)
 p= question.body
