update html pages 'for permissions'

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,8 +4,10 @@ br
 span answer body:
 span= answer.body
 br
-span= link_to 'Edit answer', edit_answer_path(answer)
-span |
-span= link_to 'Delete answer', answer_path(answer), method: :delete
-br
+  - if have_permission?(answer)
+    span= link_to 'Edit answer', edit_answer_path(answer)
+    span |
+    span= link_to 'Delete answer', answer_path(answer), method: :delete
+    br
+
 br
