--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -15,18 +15,17 @@ h3
 
 h4
   - if signed_in?
-    = form_with model: [@question, Answer.new], local: true do |f|
-      = f.label :body
-      br
-      = f.text_field :body
-      br
-      = f.submit
+    = render 'answers/form'
 
-  br
+h4
   span Answers:
-  span= @question.answers.count
+  span= @answers.count
   br
-  br
+p
   .answers
-    = render @question.answers
+    - if @answers.present?
+      = render @answers
+
+
+
 
