add ajax for create answers

--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -1,4 +1,5 @@
-= form_with model: [@question, @answer], local: true do |f|
+= form_with model: [@question, @answer] do |f|
+  = render 'shared/errors', resource: @answer
   = f.label 'body'
   br
   = f.text_field :body
