--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -13,8 +13,10 @@ br
       = link_to 'Edit question', edit_question_path(@question)
       span  |
       = link_to 'Delete question', question_path(@question), method: :delete
-  h4
-    = render 'answers/form'
+
+  .answer-errors
+    = render 'shared/errors', resource: @answer
+  = render 'answers/form'
 
 h4
   span Answers:
@@ -22,7 +24,7 @@ h4
   br
 p
   .answers
-    = render @answers
+    = render @answers.order(created_at: :desc)
 
 
 
