--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,5 +1,6 @@
 $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
+
 <% if @answer.persisted? %>
   $('.answers').append('<%= j render @answer %>');
-  $('#answer_body').val('');
+  $('.new-answer #answer_body').val('');
 <% end %>
