refactoring questions controller for ajax

--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with model: @question, local: true do |f|
+= form_with model: @question do |f|
   = render 'shared/errors', resource: @question
   br
   = f.label 'title'
