--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -1,5 +1,1 @@
-$('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
-
-<% if !@answer.errors.present? %>
-$('.answers').html('<%= j render @question.answers %>');
-<% end %>
+$('.question_<%= @question.id %>').html('<%= j render @question %>');
