--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -5,4 +5,8 @@ h2
     = link_to 'Ask question', new_question_path
 
 .questions
-  = render @questions
+  - @questions.each do |q|
+    p
+      = link_to q.title, question_path(q)
+      br
+      = truncate(q.body, length: 130, separator: ' ')
