--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,12 +1,5 @@
-h1= @question.title
-p= @question.body
+= render @question
 
-- if current_user&.creator?(@question)
-  p
-    / = link_to 'Edit question', edit_question_path(@question)
-    = render 'questions/form'
-    span |
-    = link_to 'Delete question', question_path(@question), method: :delete
 br
 .answer-errors
   = render 'shared/errors', resource: @answer
