checkpoint for all green spec

--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with model: @question, id: "edit-question-#{@question.id}", class: 'edit_question' do |f|
+= form_with model: @question, id: "edit-question-#{@question.id}" do |f|
   .question-errors
     = render 'shared/errors', resource: @question
   br
