--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -5,7 +5,18 @@ div class="question_#{question.id}"
   - if current_user&.creator?(question)
     p
       = link_to 'Edit question', '#', class: 'edit-question-link', data: { question_id: question.id }
-      .edit_question
-      = render 'questions/form'
+      = form_with model: @question, id: "edit-question-#{@question.id}", class: 'edit_question' do |f|
+        .question-errors
+          = render 'shared/errors', resource: @question
+        br
+        = f.label 'title'
+        = f.text_field :title
+        br
+        br
+        = f.label 'body'
+        = f.text_area :body
+        br
+        br
+        = f.submit 'Save'
       br
       = link_to 'Delete question', question_path(question), method: :delete
