add errors for update question js

--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -1,1 +1,6 @@
-$('.question_<%= @question.id %>').html('<%= j render @question %>');
+$('.question-errors').html('<%= render 'shared/errors', resource: @question %>');
+
+<% if !@question.errors.present? %>
+  $('.question_<%= @question.id %>').html('<%= j render @question %>');
+<% end %>
+
