--- a/app/views/questions/update.js.erb
+++ b/app/views/questions/update.js.erb
@@ -1,6 +1,6 @@
 $('.question-errors').html('<%= render 'shared/errors', resource: @question %>');
 
-<% if !@question.errors.present? %>
+<% unless @question.errors.present? %>
   $('.question_<%= @question.id %>').html('<%= j render @question %>');
 <% end %>
 
