--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -1,3 +1,9 @@
-// Place all the styles related to the Answers controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.answer_card {
+  border: blue solid 2px;
+  padding: 15px;
+  width: 50%;
+}
+
+.answer_body {
+  font: italic 14pt verdana;
+}
