--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -14,3 +14,10 @@
 .edit_question {
   display: none;
 }
+
+.best_answer_of_question {
+  font: bold 16pt verdana;
+  color: green;
+  padding: 15px;
+  width: 50%;
+}
