green unit spec questions controller for action 'select best answer'

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -8,7 +8,7 @@
       a= link_to 'Delete answer', answer_path(answer), method: :delete, data: { remote: true }
       span |
     - if current_user&.creator?(answer.question)
-      a= link_to 'Make it best', select_best_answer_path(answer.question, answer)
+      a= link_to 'Make it best', select_best_answer_path(answer.question, answer), method: :patch, remote: true
 
     = form_with model: answer, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |f|
       = f.label :body
