--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,18 +10,10 @@
   </head>
 
   <body>
-    <%= link_to 'Questions', questions_path %> |
-
-    <% if signed_in? %>
-      <%= current_user.email %> |
-      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to 'Sign in', new_user_session_path %> |
-      <%= link_to 'Sign up', new_user_registration_path %>
-    <% end %>
-
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render 'layouts/navigation' %>
+    <div class="container">
+      <%= render 'shared/flash' %>
+    </div>
 
     <div class="container">
       <%= yield %>
