--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -1,13 +1,17 @@
 = form_with model: @question, id: "edit-question-#{@question.id}" do |f|
   .question-errors
     = render 'shared/errors', resource: @question
-  br
-  = f.label 'title'
-  = f.text_field :title
-  br
-  br
-  = f.label 'body'
-  = f.text_area :body
-  br
-  br
-  = f.submit 'Save'
+  p
+    = f.label 'title'
+    br
+    = f.text_field :title, :required => true
+  p
+    = f.label 'body'
+    br
+    = f.text_area :body, :required => true
+  p
+    = f.label :file
+    br
+    = f.file_field :file
+  p
+    = f.submit 'Save'
