--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -2,6 +2,9 @@ div class="question_#{question.id}"
   h1= question.title
   p= question.body
 
+  - if question.file.attached?
+    p= link_to question.file.filename.to_s, url_for(question.file)
+
   - if current_user&.creator?(question)
     = link_to 'Edit question', '#', class: 'edit-question-link', data: { question_id: question.id }
     span |
