--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -2,8 +2,11 @@ div class="question_#{question.id}"
   h1= question.title
   p= question.body
 
-  - if question.file.attached?
-    p= link_to question.file.filename.to_s, url_for(question.file)
+  - if question.files.attached?
+    div class="alert alert-warning"
+      - question.files.each do |file|
+        = link_to file.filename.to_s, url_for(file), target: "_blank"
+        br
 
   - if current_user&.creator?(question)
     = link_to 'Edit question', '#', class: 'edit-question-link', data: { question_id: question.id }
