--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -12,17 +12,20 @@ div class="question_#{question.id}"
     = link_to 'Edit question', '#', class: 'edit-question-link', data: { question_id: question.id }
     span |
     = link_to 'Delete question', question_path(question), method: :delete
-    = form_with model: @question, id: "edit-question-#{@question.id}", class: 'edit_question' do |f|
+    = form_with model: @question, id: "edit-question-#{question.id}", class: 'edit_question' do |f|
       .question-errors
-        = render 'shared/errors', resource: @question
-      br
-      = f.label 'title'
-      = f.text_field :title
-      br
-      br
-      = f.label 'body'
-      = f.text_area :body
-      br
-      br
-      = f.submit 'Save'
-      br
+        = render 'shared/errors', resource: question
+      p
+        = f.label 'title'
+        br
+        = f.text_field :title, :required => true
+      p
+        = f.label 'body'
+        br
+        = f.text_area :body, :required => true
+      p
+        = f.label :files
+        br
+        = f.file_field :files, multiple: true
+      p
+        = f.submit 'Save'
