--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -5,9 +5,12 @@ div class="answer_#{answer.id}"
     = answer.body
     br
     - if answer.files.attached?
-      - answer.files.each do |file|
-        = link_to file.filename.to_s, url_for(file), target: "_blank"
-        br
+      div class="alert alert-warning"
+        - answer.files.each do |file|
+          - if current_user&.creator?(answer)
+            = link_to 'delete file', delete_attachment_path(file.id), class: 'btn btn-danger btn-sm'
+          = link_to file.filename.to_s, url_for(file), target: "_blank"
+          br
     - if current_user&.creator?(answer)
       br
       a= link_to 'Edit answer', '#', class: 'edit-answer-link', data: {answer_id: answer.id}
