--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -22,9 +22,14 @@ div class="answer_#{answer.id}"
       a= link_to 'Make it best', select_best_answer_path(answer), method: :patch, remote: true
 
     = form_with model: answer, class: 'hidden', html: {id: "edit-answer-#{answer.id}"} do |f|
-      = f.label :body
-      br
-      = f.text_area :body
-      br
-      = f.submit
+      p
+        = f.label :body
+      p
+        = f.text_area :body
+      p
+        = f.label :files
+        br
+        = f.file_field :files, multiple: true
+      p
+        = f.submit
       br
