--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,35 +1,36 @@
 div class="answer_#{answer.id}"
-  .answer_card
-    - if answer.best?
-      .best_answer_of_question Best answer!
-    = answer.body
-    br
-    - if answer.files.attached?
-      div class="alert alert-info"
-        - answer.files.each do |file|
-          - if current_user&.creator?(answer)
-            = link_to 'delete file', delete_attachment_path(file.id), class: 'btn btn-danger btn-sm'
-          = link_to file.filename.to_s, url_for(file), target: "_blank"
-          br
-
-    - if current_user&.creator?(answer)
-      = link_to 'Edit answer', '#', class: 'edit-answer-link', data: {answer_id: answer.id}
-      span |
-      = link_to 'Delete answer', answer_path(answer), method: :delete, data: {remote: true}
-      span |
-    - if current_user&.creator?(answer.question)
+  div class="card border-primary"
+    div class="card-body"
+      - if answer.best?
+        .best_answer_of_question Best answer!
+      = answer.body
       br
-      = link_to 'Make it best', select_best_answer_path(answer), method: :patch, remote: true
+      - if answer.files.attached?
+        div class="alert alert-info"
+          - answer.files.each do |file|
+            - if current_user&.creator?(answer)
+              = link_to 'delete file', delete_attachment_path(file.id), class: 'btn btn-danger btn-sm'
+            = link_to file.filename.to_s, url_for(file), target: "_blank"
+            br
 
-    = form_with model: answer, class: 'hidden', html: {id: "edit-answer-#{answer.id}"} do |f|
-      p
-        = f.label :body
-      p
-        = f.text_area :body
-      p
-        = f.label :files
+      - if current_user&.creator?(answer)
+        = link_to 'Edit answer', '#', class: 'edit-answer-link', data: {answer_id: answer.id}
+        span |
+        = link_to 'Delete answer', answer_path(answer), method: :delete, data: {remote: true}
+        span |
+      - if current_user&.creator?(answer.question)
         br
-        = f.file_field :files, multiple: true
-      p
-        = f.submit
-      br
+        = link_to 'Make it best', select_best_answer_path(answer), method: :patch, remote: true
+
+      = form_with model: answer, class: 'hidden', html: {id: "edit-answer-#{answer.id}"} do |f|
+        p
+          = f.label :body
+        p
+          = f.text_area :body
+        p
+          = f.label :files
+          br
+          = f.file_field :files, multiple: true
+        p
+          = f.submit
+        br
