--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   <body>
     <%= render 'layouts/navigation' %>
     <div class="container">
-      <%= render 'shared/flash' %>
+      <div class="flashes">
+        <%= render 'shared/flash' %>
+      </div>
     </div>
 
     <div class="container">
