checkpoint for all green rspec

--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -20,11 +20,11 @@ div class="question_#{question.id}"
       p
         = f.label 'title'
         br
-        = f.text_field :title, :required => true
+        = f.text_field :title
       p
         = f.label 'body'
         br
-        = f.text_area :body, :required => true
+        = f.text_area :body
       p
         = f.label :files
         br
