--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -5,14 +5,7 @@ div class="answer_#{answer.id}"
         .best_answer_of_question Best answer!
       = answer.body
       br
-      - if answer.files.attached?
-        div class="alert alert-info"
-          - answer.files.each do |file|
-            div id="attachment_#{file.id}"
-              - if record_creator?(file)
-                = link_to 'delete file', delete_attachment_path(file.id), class: 'btn btn-danger btn-sm', remote: true, data: { confirm: 'Are you sure?' }
-              = link_to file.filename.to_s, url_for(file), target: "_blank"
-              br
+      = render 'shared/attachment_actions', resource: answer
 
       - if current_user&.creator?(answer)
         = link_to 'Edit answer', '#', class: 'edit-answer-link', data: {answer_id: answer.id}
