--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,15 +1,8 @@
 div class="question_#{question.id}"
   h1= question.title
   p= question.body
+  = render 'shared/attachment_actions', resource: question
 
-  - if question.files.attached?
-    div class="alert alert-info"
-      - question.files.each do |file|
-        div id="attachment_#{file.id}"
-          - if record_creator?(file)
-            = link_to 'delete file', delete_attachment_path(file.id), class: 'btn btn-danger btn-sm', remote: true, data: { confirm: 'Are you sure?' }
-          = link_to file.filename.to_s, url_for(file), target: "_blank"
-          br
   - if current_user&.creator?(question)
     = link_to 'Edit question', '#', class: 'edit-question-link', data: { question_id: question.id }
     span |
