--- a/app/views/shared/_flash.html.slim
+++ b/app/views/shared/_flash.html.slim
@@ -1,2 +1,2 @@
 - flash.each do |key, message|
-  = content_tag :div, sanitize(message), class: "#{flash_convert(key)}"
+  = content_tag :div, sanitize(message), class: flash_convert(key)
