direct upload work with local storage

--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -24,7 +24,7 @@ div class="answer_#{answer.id}"
         p
           = f.label :files
           br
-          = f.file_field :files, multiple: true
+          = f.file_field :files, multiple: true, direct_upload: true
         p
           = f.submit
         br
