--- a/app/views/questions/_form.html.slim
+++ b/app/views/questions/_form.html.slim
@@ -12,6 +12,6 @@
   p
     = f.label :files
     br
-    = f.file_field :files, multiple: true
+    = f.file_field :files, multiple: true, direct_upload: true
   p
     = f.submit 'Save'
