--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -13,7 +13,7 @@ br
     p
       = f.label :files
       br
-      = f.file_field :files, multiple: true
+      = f.file_field :files, multiple: true, direct_upload: true
     p
       = f.submit
 
