added factory wrong_user

--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -21,6 +21,6 @@ div class="question_#{question.id}"
       p
         = f.label :files
         br
-        = f.file_field :files, multiple: true
+        = f.file_field :files, multiple: true, direct_upload: true
       p
         = f.submit 'Save'
