--- a/app/assets/stylesheets/attachments.scss
+++ b/app/assets/stylesheets/attachments.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the Attachments controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.file-card {
+  padding: 10px;
+  min-height: 57px;
+  width: 50%;
+  background-color: #c2ffa4;
+  border: 2px solid #74e261;
+  border-radius: 5px;
+}
