--- a/app/views/shared/_attachment_actions.html.slim
+++ b/app/views/shared/_attachment_actions.html.slim
@@ -1,5 +1,5 @@
 - if files_present?(resource)
-  div class="alert alert-info"
+  div class="file-card"
     - resource.files.each do |file|
       div id="attachment_#{file.id}"
         - if record_creator?(file)
