--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -3,4 +3,8 @@ $('.answer-errors').html('<%= render 'shared/errors', resource: @answer %>');
 <% if @answer.persisted? %>
   $('.answers').prepend('<%= j render @answer %>');
   $('.new-answer #answer_body').val('');
+  $('#addAnswerForm').hide();
+  $('#addAnswerButton').show();
 <% end %>
+
+
