--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -4,9 +4,9 @@ div class="question_#{question.id}"
   = render 'shared/attachment_actions', resource: question
 
   - if current_user&.creator?(question)
-    = link_to 'Edit question', '#', class: 'edit-question-link', data: { question_id: question.id }
-    span |
-    = link_to 'Delete question', question_path(question), method: :delete
+    = link_to 'Edit question', '#', class: 'edit-question-link text-warning', data: { question_id: question.id }
+    '
+    = link_to 'Delete question', question_path(question), method: :delete, class: 'text-danger'
     = form_with model: @question, id: "edit-question-#{question.id}", class: 'edit_question' do |f|
       .question-errors
         = render 'shared/errors', resource: question
